--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,12 +1,36 @@
-<div class="nav">
-  <a href="index.html" class="active">Accueil</a>
-  <a href="#">Notre Histoire</a>
-  <a href="#">Pourquoi nous?</a>
-  <a href="#">Partenariats</a>
-  <a href="#">Prestations</a>
-  <a href="#">Temoignages</a>
-  <a href="#">Parainages</a>
-  <a href="#">Conseils</a>
-  <a href="#">Contacts</a>
-  <a href="#" class="right">Login</a>
+<div class="container mt-10">
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#Home">Accueil</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#History">Notre Histoire</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#WhyUs">Pourquoi nous?</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Parteners">Partenariats</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Presentation">Prestations</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Witness">Temoignages</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Sponsorship">Parainages</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Advices">Conseils</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#Contacts">Contacts</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#LogIn" class="right"
+        >Login</a
+      >
+    </li>
+  </ul>
 </div>
