--- a/src/app/products-main/products-main.component.html
+++ b/src/app/products-main/products-main.component.html
@@ -1,1 +1,12 @@
-<p>products-main works!</p>
+<div class="tab-content">
+  <div id="Home" class="container tab-pane active"><br /></div>
+  <div id="History" class="container tab-pane fade"><br /></div>
+  <div id="WhyUs" class="container tab-pane fade"><br /></div>
+  <div id="Parteners" class="container tab-pane fade"><br /></div>
+  <div id="Presentation" class="container tab-pane fade"><br /></div>
+  <div id="Witness" class="container tab-pane fade"><br /></div>
+  <div id="Sponsorship" class="container tab-pane fade"><br /></div>
+  <div id="Advices" class="container tab-pane fade"><br /></div>
+  <div id="Contacts" class="container tab-pane fade"><br /></div>
+  <div id="LogIn" class="container tab-pane fade"><br /></div>
+</div>
