--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 <app-top-bar></app-top-bar>
 
 <!--  Main  -->
-<div class="container">
+<div class="container-fluid">
   <app-products-main></app-products-main>
 </div>
