--- a/src/app/products-main/products-main.component.html
+++ b/src/app/products-main/products-main.component.html
@@ -1,12 +1,152 @@
 <div class="tab-content">
-  <div id="Home" class="container tab-pane active"><br /></div>
-  <div id="History" class="container tab-pane fade"><br /></div>
-  <div id="WhyUs" class="container tab-pane fade"><br /></div>
-  <div id="Parteners" class="container tab-pane fade"><br /></div>
+  <div id="Home" class="container tab-pane active">
+    <br />
+    <h3></h3>
+    <div
+      class=""
+      style="text-align:center;background-color: blue;color: orange;"
+    >
+      <h2>BATIR SEREINEMENT ET RAPIDEMENT SA NOUVELLE VIE PROFESSIONNELLE !</h2>
+      <br />
+      <h3>
+        Des prestations sur-mesure, haut de gamme, avec un service automatisé de
+        diffusion de CV
+      </h3>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <br />
+        <ul>
+          <li>
+            Votre emploi ne vous convient pas et vous ne savez pas pour quel
+            métier vous êtes fait(e) ?
+          </li>
+          <li>
+            Vous avez plusieurs compétences et souhaitez savoir pour quel métier
+            vous avez le plus de chances d’être recruté(e) ?
+          </li>
+          <li>
+            Vous avez des difficultés à rédiger un CV et une lettre de
+            motivation attractifs ?
+          </li>
+          <li>
+            Trouver les coordonnées des recruteurs vous prend trop de temps ?
+          </li>
+          <li>
+            Vous avez envoyé de nombreux CV et n’avez pratiquement obtenu aucun
+            entretien ?
+          </li>
+          <li>Vous n’êtes pas à l’aise en entretien de recrutement ?</li>
+          <li>
+            Vos entretiens n’aboutissent pas à des propositions d’emploi ?
+          </li>
+          <li>Vous avez besoin de trouver un emploi au plus vite ?</li>
+          <li>
+            Vous souhaitez être accompagné(e) par un(e) professionnel(le)
+            expérimenté(e) tout au long de votre recherche d’emploi ?
+          </li>
+          <li>...</li>
+        </ul>
+        <br />
+      </div>
+      <div class="col-md-4">
+        <p>Vidéo :</p>
+        <div class="fakeimg" style="height:200px;">Image</div>
+      </div>
+    </div>
+    <div
+      class=""
+      style="text-align:center; background-color: blue;color: orange;"
+    >
+      <h2>Pas de panique, nous pouvons vous aider !</h2>
+    </div>
+  </div>
+  <div id="History" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8">
+        <p>
+          NOM-CABINET est née d’un constat simple : il est de plus en plus
+          difficile de trouver un emploi !
+        </p>
+        <ul>
+          <li>
+            <a href="#"
+              >Au 3e trimestre 2020, la durée d’inscription à Pôle emploi
+              s’établit à 394 jours, en hausse de 8 jours par rapport au 1er
+              trimestre 2020 ;</a
+            >
+          </li>
+          <li>
+            Plus de 50 ans : 625 jours (pour les hommes) ; 687 jours (pour les
+            femmes).
+          </li>
+        </ul>
+        <p>
+          Généralement les candidats ne savent pas assez bien définir leurs
+          atouts concurrentiels, ni réaliser un CV et une lettre de motivation
+          efficaces. Ils ont du mal à trouver les recruteurs susceptibles d’être
+          intéressés par leurs compétences, ne connaissent pas les principales
+          techniques pour réussir un entretien de recrutement, ne maîtrisent pas
+          l’utilisation des réseaux sociaux pour leur recherche d’emploi...<br />Au
+          vu du nombre élevé de personnes à la recherche d’un emploi, le service
+          public a peu de temps à consacrer à chacun d’entre eux. Les bénévoles
+          n’ont pas toujours le temps et/ou les qualifications adaptées pour
+          accompagner les candidats dans leur recherche. Quant aux consultants
+          indépendants, ils ne sont pas très outillés (au niveau informatique)
+          et les sociétés d’outplacement ont des tarifs inaccessibles pour de
+          nombreux candidats.<br /><b
+            >Notre cabinet met au service des candidats (de tous profils) des
+            consultant(e)s expérimenté(e)s et investi(e)s, dotés d’outils
+            informatiques puissants, à des tarifs concurrentiels.</b
+          >
+        </p>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+  <div id="WhyUs" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+  <div id="Parteners" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
   <div id="Presentation" class="container tab-pane fade"><br /></div>
-  <div id="Witness" class="container tab-pane fade"><br /></div>
-  <div id="Sponsorship" class="container tab-pane fade"><br /></div>
+  <div id="Witness" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+  <div id="Sponsorship" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
   <div id="Advices" class="container tab-pane fade"><br /></div>
-  <div id="Contacts" class="container tab-pane fade"><br /></div>
+  <div id="Contacts" class="container tab-pane fade">
+    <br />
+    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <div class="row">
+      <div class="col-md-8"></div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
   <div id="LogIn" class="container tab-pane fade"><br /></div>
 </div>
