--- a/src/app/products-main/products-main.component.html
+++ b/src/app/products-main/products-main.component.html
@@ -108,45 +108,85 @@
   </div>
   <div id="WhyUs" class="container tab-pane fade">
     <br />
-    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+    <h3 style="text-align:center; color: blue;">Pourquoi nous ?</h3>
     <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4"></div>
+      <div class="col-sm-1"><div class="fakeimg">Fake Image</div></div>
+      <div class="col-md-8">
+        <p>
+          <span class="glyphicon glyphicon-ok"></span
+          ><b> Un accompagnement de haut niveau, sur-mesure et outillé</b><br />
+          L’accompagnement par un professionnel permet de gagner du temps et
+          d’éviter de commettre des erreurs préjudiciables. Notre cabinet met à
+          disposition des consultants expérimentés ayant au moins dix années
+          d’expérience.<br />
+          L’accompagnement est totalement individualisé et intensif, en face à
+          face et/ou à distance, pendant ou en dehors des heures de travail,
+          pour un rapide accès à l’emploi.<br />
+          NOM-CABINET a développé de nombreux outils informatiques, comme son
+          propre moteur de recherche d’offres d’emploi qui référence des
+          centaines de milliers d’offres.<br />
+          Et surtout, NOM-CABINET dispose d’une base de données, régulièrement
+          mise à jour, de plus de 190.000 recruteurs au niveau national et
+          international. Elle comprend les profils recherchés, la localisation
+          des postes et les types de contrats proposés par ces recruteurs.<br />
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-1"><div class="fakeimg">Fake Image</div></div>
+      <div class="col-md-8">
+        <p><span class="glyphicon glyphicon-ok"></span><b>  Des prestations garanties ou illimitées</b><br />Comme chaque personne est différente, la majorité des prestations sont illimitées : prix forfaitaire et autant de temps que nécessaire pour définir son projet professionnel, obtenir un CV et une lettre de motivation efficaces, pour se sentir à l’aise en entretien... Dans le cas de l’outplacement, l’accompagnement peut même aller jusqu’à la fin de la période d’essai du candidat en entreprise.<br>Si le CV du candidat a été valorisé par NOM-CABINET, le résultat de sa diffusion auprès des recruteurs est garanti :  nous  nous  engageons à rembourser intégralement la prestation de diffusion du CV si le candidat n’était pas recontacté par des recruteurs sous un mois à compter de la diffusion de son CV (cela ne s’est encore jamais produit).<br></p>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1"><div class="fakeimg">Fake Image</div></div>
+        <div class="col-md-8">
+          <p><span class="glyphicon glyphicon-ok"></span><b>Nos valeurs</b><br />Notre cabinet est fondé sur des valeurs humaines solides : l’écoute, la bienveillance, l’empathie, l’entraide... <br></p>
+        </div>
+    </div>
+    <div class="row">
+          <div class="col-sm-1"><div class="fakeimg">Fake Image</div></div>
+          <div class="col-md-8">
+            <p><span class="glyphicon glyphicon-ok"></span><b>La satisfaction de nos clients</b><br /></p>
+          </div>
+    </div>
+    <b style="text-align:center;">Il nous reste tant d’autres histoires à écrire... Pourquoi pas la vôtre ?</b>
+  </div>
+      <div id="Parteners" class="container tab-pane fade">
+        <br />
+        <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+        <div class="row">
+          <div class="col-md-8"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+      <div id="Presentation" class="container tab-pane fade"><br /></div>
+      <div id="Witness" class="container tab-pane fade">
+        <br />
+        <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+        <div class="row">
+          <div class="col-md-8"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+      <div id="Sponsorship" class="container tab-pane fade">
+        <br />
+        <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+        <div class="row">
+          <div class="col-md-8"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+      <div id="Advices" class="container tab-pane fade"><br /></div>
+      <div id="Contacts" class="container tab-pane fade">
+        <br />
+        <h3 style="text-align:center; color: blue;">Notre histoire</h3>
+        <div class="row">
+          <div class="col-md-8"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div>
+      <div id="LogIn" class="container tab-pane fade"><br /></div>
     </div>
   </div>
-  <div id="Parteners" class="container tab-pane fade">
-    <br />
-    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
-    <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4"></div>
-    </div>
-  </div>
-  <div id="Presentation" class="container tab-pane fade"><br /></div>
-  <div id="Witness" class="container tab-pane fade">
-    <br />
-    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
-    <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4"></div>
-    </div>
-  </div>
-  <div id="Sponsorship" class="container tab-pane fade">
-    <br />
-    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
-    <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4"></div>
-    </div>
-  </div>
-  <div id="Advices" class="container tab-pane fade"><br /></div>
-  <div id="Contacts" class="container tab-pane fade">
-    <br />
-    <h3 style="text-align:center; color: blue;">Notre histoire</h3>
-    <div class="row">
-      <div class="col-md-8"></div>
-      <div class="col-md-4"></div>
-    </div>
-  </div>
-  <div id="LogIn" class="container tab-pane fade"><br /></div>
 </div>
